--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
             "name": "helene-cezard",
             "email": "helene.cezard@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4" : {
+            "app\\" : "app/"
+        }
+    }
 }
